--- a/assets/css/scss/components/_order_button.scss
+++ b/assets/css/scss/components/_order_button.scss
@@ -4,7 +4,7 @@
       width: 60%;
       height: 58px;
       color: white;
-      font-size: $subtitle2-size;
+      font-size: $buttontitle-size;
       font-weight: bold;
       margin-top: 20px;
       border: 1px solid #fdfdfd;
