--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -21,7 +21,7 @@ $title-size: 1.8rem;
 $title2-size: 1.5rem;
 $card-title: 1.3rem;
 $card-subtitle: 1.1rem;
-$subtitle2-size: 1rem;
+$buttontitle-size: 1rem;
 $description-size: 0.5rem;
 // penser à modifier le nom des variables. trop vague
 
