--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,60 +39,60 @@ body {
   padding: 0;
 }
 
-@media screen and (max-width: 480px) {
-  .section1__searchbutton {
-    width: 60%;
-    height: 58px;
-    color: white;
-    font-size: 1rem;
-    font-weight: bold;
-    margin-top: 20px;
-    border: 1px solid #fdfdfd;
-    border-radius: 139px;
-    background: #ff79da;
-    background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
-  }
+.section1__searchbutton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 60%;
+  height: 58px;
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-top: 25px;
+  margin-bottom: 40px;
+  border: 1px solid #fdfdfd;
+  border-radius: 139px;
+  background: #ff79da;
+  background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
 }
 
-@media screen and (max-width: 480px) {
-  .section2__card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    text-decoration: none;
-    color: black;
-    width: 90%;
-    height: 70px;
-    margin-top: 30px;
-    box-shadow: 5px 5px 8px 5px #dfdfdf;
-    border-radius: 15px;
-    background-color: #f6f6f6;
-  }
-  .section2__card .section2__number {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    position: absolute;
-    left: 10px;
-    margin: 0;
-    width: 25px;
-    height: 25px;
-    color: white;
-    font-size: 10px;
-    border-radius: 50%;
-    background-color: #9356dc;
-  }
-  .section2__card .section2__icon {
-    color: rgba(0, 0, 0, 0.506);
-    position: absolute;
-    left: 60px;
-  }
-  .section2__card .section2__text {
-    font-size: 1.1rem;
-    font-weight: bold;
-  }
+.section2__card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  text-decoration: none;
+  color: black;
+  width: 90%;
+  height: 70px;
+  margin-top: 30px;
+  box-shadow: 5px 5px 8px 5px #dfdfdf;
+  border-radius: 15px;
+  background-color: #f6f6f6;
+}
+.section2__card .section2__number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  position: absolute;
+  left: 15px;
+  width: 25px;
+  height: 25px;
+  color: white;
+  font-size: 10px;
+  border-radius: 50%;
+  background-color: #9356dc;
+}
+.section2__card .section2__icon {
+  color: rgba(0, 0, 0, 0.506);
+  position: absolute;
+  left: 60px;
+}
+.section2__card .section2__text {
+  font-size: 1.1rem;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 480px) {
@@ -307,16 +307,17 @@ main {
   text-align: center;
   font-weight: bold;
 }
-.section1 .section1__maintitle .section1__subtitle {
+.section1 .section1__subtitle {
   font-size: 1.1rem;
   text-align: center;
   font-weight: normal;
 }
 
-@media screen and (min-width: 480px) {
-  .section2 .section2__maintitle {
-    margin-left: 20px;
-  }
+.section2 {
+  width: 100%;
+}
+.section2 .section2__maintitle {
+  margin-left: 20px;
 }
 
 @media screen and (min-width: 480px) {
