--- a/assets/css/scss/components/_cards_section2.scss
+++ b/assets/css/scss/components/_cards_section2.scss
@@ -1,31 +1,43 @@
 .section2__card {
+  @include flexbox-rowcenter;
+  text-decoration: none;
+  color: black;
+  width: 90%;
+  height: 70px;
+  margin-top: 30px;
+  box-shadow: $boxshadow-standard;
+  border-radius: 15px;
+  background-color: $background-color-grey;
+  @media screen and (min-width: $tablet) {
+    width: 80%;
+  }
+  .section2__number {
     @include flexbox-rowcenter;
-    text-decoration: none;
-    color: black;
-    width: 90%;
-    height: 70px;
-    margin-top: 30px;
-    box-shadow: 5px 5px 8px 5px #dfdfdf;
-    border-radius: 15px;
-    background-color: $background-color-grey;
-    .section2__number {
-      @include flexbox-rowcenter;
-      position: absolute;
-      left: 15px;
-      width: 25px;
-      height: 25px;
-      color: white;
-      font-size: 10px;
-      border-radius: 50%;
-      background-color: $primary-color;
+    position: absolute;
+    left: 15px;
+    width: 25px;
+    height: 25px;
+    color: white;
+    font-size: 10px;
+    border-radius: 50%;
+    background-color: $primary-color;
+    @media screen and (min-width: $tablet) {
+      left: 12%;
     }
-    .section2__icon {
-      color: rgba(0, 0, 0, 0.506);
-      position: absolute;
-      left: 60px;
+  }
+  .section2__icon {
+    color: rgba(0, 0, 0, 0.506);
+    position: absolute;
+    left: 60px;
+    @media screen and (min-width: $tablet) {
+      left: 25%;
     }
-    .section2__text {
-      font-size: $card-subtitle;
-      font-weight: bold;
+  }
+  .section2__text {
+    font-size: $card-subtitle;
+    font-weight: bold;
+    @media screen and (min-width: $tablet) {
+      font-size: $title2-size;
     }
+  }
 }
