--- a/assets/css/scss/components/_cards_section3.scss
+++ b/assets/css/scss/components/_cards_section3.scss
@@ -1,54 +1,65 @@
 .resto-prev__card {
-    @include flexbox-columncenter;
-    align-items: stretch;
+  @include flexbox-columncenter;
+  align-items: stretch;
+  width: 100%;
+  height: auto;
+  margin-bottom: 30px;
+  border-radius: 17px;
+  box-shadow: $boxshadow-standard;
+  @media screen and (min-width: $tablet) {
+    width: 48%;
+  }
+  .resto-prev__cardlink {
+    color: black;
+  }
+  .card--new {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    right: 10%;
+    width: 25%;
+    color: #139273;
+    font-weight: bold;
+    border-radius: 3px;
+    background-color: #99e2d0;
+    padding: 5px 10px;
+    @media screen and (min-width: $tablet) {
+      position: relative;
+      left: 70%;
+      top: 15%;
+    }
+  }
+  .card__picture {
     width: 100%;
-    height: auto;
-    margin-bottom: 30px;
-    // border: 2px solid rgba(0, 0, 0, 0.01); config ratée
-    border-radius: 17px;
-    box-shadow: 5px 5px 8px 5px #dfdfdf;
-    .resto-prev__cardlink {
-      text-decoration: none;
-      color: black;
+    height: 216px;
+    border-radius: 17px 17px 0px 0px;
+  }
+  .card__description {
+    border: 5px solid rgba(0, 0, 0, 0.01);
+    border-radius: 0px 0px 17px 17px;
+    width: 100%;
+    height: 100px;
+    padding-left: 10px;
+    @include flexbox-rowstart;
+    flex-wrap: wrap;
+  }
+  .description__title {
+    width: 70%;
+    font-weight: bold;
+  }
+  .description__subtitle {
+    width: 60%;
+    margin-top: -15px;
+    font-weight: normal;
+  }
+  .description__hearticon {
+    font-size: 30px;
+    position: absolute;
+    right: 15%;
+    @media screen and (min-width: $tablet) {
+      position: relative;
+      bottom: 75%;
+      left: 25%;
     }
-    .card--new {
-      display: flex;
-      justify-content: center;
-      position: absolute;
-      right: 10%;
-      width: 25%;
-      color: #139273;
-      font-weight: bold;
-      border-radius: 3px;
-      background-color: #99e2d0;
-      padding: 5px 10px;
-    }
-    .card__picture {
-      width: 100%;
-      height: 216px;
-      border-radius: 17px 17px 0px 0px;
-    }
-    .card__description {
-      border: 5px solid rgba(0, 0, 0, 0.01);
-      border-radius: 0px 0px 17px 17px;
-      width: 100%;
-      height: 100px;
-      padding-left: 10px;
-      @include flexbox-rowstart;
-      flex-wrap: wrap;
-    }
-    .description__title {
-      width: 70%;
-      font-weight: bold;
-    }
-    .description__subtitle {
-      width: 60%;
-      margin-top: -15px;
-      font-weight: normal;
-    }
-    .description__hearticon {
-      font-size: 30px;
-      position: absolute;
-      right: 15%;
-    }
+  }
 }
