--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -26,3 +26,9 @@ $description-size: 0.5rem;
 // penser à modifier le nom des variables. trop vague
 
 // Fin des variables pour la police
+
+// Variables pour les ombres
+
+$boxshadow-standard: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
+
+// Fin des variables pour les ombres
