--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,7 @@ p {
 }
 
 img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 body {
@@ -53,8 +52,14 @@ body {
   margin-bottom: 40px;
   border: 1px solid #fdfdfd;
   border-radius: 139px;
+  box-shadow: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
   background: #ff79da;
   background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+}
+@media screen and (min-width: 576px) {
+  .section1__searchbutton {
+    width: 40%;
+  }
 }
 
 .section2__card {
@@ -67,9 +72,14 @@ body {
   width: 90%;
   height: 70px;
   margin-top: 30px;
-  box-shadow: 5px 5px 8px 5px #dfdfdf;
+  box-shadow: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
   border-radius: 15px;
   background-color: #f6f6f6;
+}
+@media screen and (min-width: 576px) {
+  .section2__card {
+    width: 80%;
+  }
 }
 .section2__card .section2__number {
   display: flex;
@@ -85,14 +95,29 @@ body {
   border-radius: 50%;
   background-color: #9356dc;
 }
+@media screen and (min-width: 576px) {
+  .section2__card .section2__number {
+    left: 12%;
+  }
+}
 .section2__card .section2__icon {
   color: rgba(0, 0, 0, 0.506);
   position: absolute;
   left: 60px;
 }
+@media screen and (min-width: 576px) {
+  .section2__card .section2__icon {
+    left: 25%;
+  }
+}
 .section2__card .section2__text {
   font-size: 1.1rem;
   font-weight: bold;
+}
+@media screen and (min-width: 576px) {
+  .section2__card .section2__text {
+    font-size: 1.5rem;
+  }
 }
 
 .resto-prev__card {
@@ -105,10 +130,14 @@ body {
   height: auto;
   margin-bottom: 30px;
   border-radius: 17px;
-  box-shadow: 5px 5px 8px 5px #dfdfdf;
+  box-shadow: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
+}
+@media screen and (min-width: 576px) {
+  .resto-prev__card {
+    width: 48%;
+  }
 }
 .resto-prev__card .resto-prev__cardlink {
-  text-decoration: none;
   color: black;
 }
 .resto-prev__card .card--new {
@@ -122,6 +151,13 @@ body {
   border-radius: 3px;
   background-color: #99e2d0;
   padding: 5px 10px;
+}
+@media screen and (min-width: 576px) {
+  .resto-prev__card .card--new {
+    position: relative;
+    left: 70%;
+    top: 15%;
+  }
 }
 .resto-prev__card .card__picture {
   width: 100%;
@@ -152,6 +188,13 @@ body {
   font-size: 30px;
   position: absolute;
   right: 15%;
+}
+@media screen and (min-width: 576px) {
+  .resto-prev__card .description__hearticon {
+    position: relative;
+    bottom: 75%;
+    left: 25%;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -221,8 +264,10 @@ body {
     margin-top: 20px;
     border: 1px solid #fdfdfd;
     border-radius: 139px;
-    box-shadow: 6px 6px 24px 4px #dfdfdf;
+    box-shadow: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
     background: #ff79da;
+    background: -moz-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+    background: -webkit-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
     background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   }
 }
@@ -246,6 +291,11 @@ body {
 .index-head .index-head__locationtext {
   font-size: 1.1rem;
 }
+@media screen and (min-width: 576px) {
+  .index-head .index-head__locationtext {
+    font-size: 1.8rem;
+  }
+}
 .index-head .logo_picture {
   height: auto;
   width: 50%;
@@ -254,6 +304,11 @@ body {
   align-items: center;
   margin: auto;
   padding: 15px;
+}
+@media screen and (min-width: 576px) {
+  .index-head .logo_picture {
+    width: 100%;
+  }
 }
 
 .index-foot {
@@ -265,6 +320,14 @@ body {
   padding-left: 7%;
   padding-top: 8%;
   padding-bottom: 8%;
+}
+@media screen and (min-width: 576px) {
+  .index-foot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .index-foot .index-foot__logo {
   width: 25%;
@@ -285,6 +348,12 @@ body {
   gap: 10px;
   height: 25px;
 }
+@media screen and (min-width: 576px) {
+  .index-foot .index-foot__link {
+    font-size: 1.5rem;
+    height: 50px;
+  }
+}
 .index-foot .link__icon {
   color: white;
 }
@@ -297,6 +366,7 @@ main {
 }
 
 .section1 {
+  width: 100%;
   background-color: #f6f6f6;
 }
 .section1 .section1__maintitle {
@@ -313,8 +383,31 @@ main {
 .section2 {
   width: 100%;
 }
+@media screen and (min-width: 576px) {
+  .section2 {
+    width: 90%;
+  }
+}
 .section2 .section2__maintitle {
   margin-left: 20px;
+}
+
+.section3 {
+  width: 90%;
+}
+@media screen and (min-width: 576px) {
+  .section3 {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .resto-prev__maintitle {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -372,4 +465,4 @@ main {
   padding-top: 10px;
   padding-bottom: 80px;
   background-color: #f6f6f6;
-}/*# sourceMappingURL=style.css.map */
+}
