Index version tablette
Configuration de l'index pour les tablettes. Suppression des ombres sur les cartes de la section 3(bordures blanches sur le dessus gênantes)

--- a/assets/css/scss/components/_cards_section3.scss
+++ b/assets/css/scss/components/_cards_section3.scss
@@ -8,6 +8,7 @@
   box-shadow: $boxshadow-standard;
   @media screen and (min-width: $tablet) {
     width: 48%;
+    box-shadow: none;
   }
   .resto-prev__cardlink {
     color: black;
