--- a/assets/css/scss/components/_button_section1.scss
+++ b/assets/css/scss/components/_button_section1.scss
@@ -15,4 +15,7 @@
   @media screen and (min-width: $tablet) {
     width: 40%;
   }
+  @media screen and (min-width: $desktop) {
+    width: 15%;
+  }
 }
