Ajout de mixins trouvées sur le net. Ajout de variable pour les breakpoints. Modification des balises titres pour la page index

--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -15,11 +15,12 @@
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-family: Shrikhand;
 }
 
-a{
+a {
   text-decoration: none;
   color: white;
 }
@@ -31,7 +32,7 @@ p {
   white-space: nowrap;
 }
 
-img{
+img {
   object-fit: cover;
 }
 
