Ajout de nouvelles mixins prises sur le net. Ajout de nouveaux formats pour la police(toujours pas reconnue par le navigateur). Configuration de la section 2 pour la version desktop problématique

--- a/assets/css/scss/utils/_mixins.scss
+++ b/assets/css/scss/utils/_mixins.scss
@@ -125,6 +125,41 @@
 
 // Fin Positionnement
 
+// Police
+
+@mixin font-face($font-name, $file-name, $weight: normal, $style: normal) {
+  @font-face {
+    font-family: quote($font-name);
+    src: url($file-name + ".eot");
+    src: url($file-name + ".eot?#iefix") format("embedded-opentype"),
+      url($file-name + ".woff") format("woff"),
+      url($file-name + ".ttf") format("truetype"),
+      url($file-name + ".svg##{$font-name}") format("svg");
+    font-weight: $weight;
+    font-style: $style;
+  }
+}
+
+// Fin de la police
+
+// marges intérieures et extérieures
+
+@mixin padding($top, $right, $bottom, $left) {
+  padding-top: $top;
+  padding-right: $right;
+  padding-bottom: $bottom;
+  padding-left: $left;
+}
+
+@mixin margin($top, $right, $bottom, $left) {
+  margin-top: $top;
+  margin-right: $right;
+  margin-bottom: $bottom;
+  margin-left: $left;
+}
+
+// Fin des marges intérieures et extérieures
+
 // Fin des mixins sur le net
 
 //---------------------------Les mauvaises idées---------------------------------
