--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -1,11 +1,16 @@
 @font-face {
   font-family: Shrikhand;
-  src: url(../../../fonts/Shrikhand/Shrikhand-Regular.ttf);
+  src: url(../../../fonts/Shrikhand/Shrikhand-Regular.ttf) format(truetype);
+  src: url(../../../fonts/Shrikhand/shrikhand-regular-webfont.woff) format(woff);
+  src: url(../../../fonts/Shrikhand/shrikhand-regular-webfont.woff2)
+    format(woff2);
 }
 
 @font-face {
   font-family: Roboto;
-  src: url(../../../fonts/Roboto/Roboto-Regular.ttf);
+  src: url(../../../fonts/Roboto/Roboto-Regular.ttf) format(truetype);
+  src: url(../../../fonts/Roboto/roboto-regular-webfont.woff);
+  src: url(../../../fonts/Roboto/roboto-regular-webfont.woff2);
 }
 
 * {
