--- a/assets/css/scss/components/_cards_section2.scss
+++ b/assets/css/scss/components/_cards_section2.scss
@@ -14,7 +14,9 @@
   @media screen and (min-width: $desktop) {
     @include flexbox-rowcenter;
     width: 25%;
-    min-width: 25%;
+    margin: auto;
+    margin-top: 0;
+    margin-bottom: 0;
   }
   .section2__number {
     @include flexbox-rowcenter;
