--- a/assets/css/scss/pages/_index.scss
+++ b/assets/css/scss/pages/_index.scss
@@ -22,15 +22,14 @@ main {
     @media screen and (min-width: $desktop) {
       width: 100%;
       @include flexbox-spacearound;
-      padding-top: 80px;
+      height: 350px;
     }
     .section2__maintitle {
       margin-left: 20px;
-    }
-    @media screen and (min-width: $desktop) {
-      width: 100%;
-      font-size: $title2-size;
-      text-align: center;
+      @media screen and (min-width: $desktop) {
+        font-size: $title2-size;
+        @include flexbox-rowcenter;
+      }
     }
   }
   .section3 {
