--- a/assets/css/scss/components/_cards_section3.scss
+++ b/assets/css/scss/components/_cards_section3.scss
@@ -2,16 +2,17 @@
   @include flexbox-columncenter;
   align-items: stretch;
   width: 100%;
-  height: auto;
+  height: 300px;
   margin-bottom: 30px;
   border-radius: 17px;
   box-shadow: $boxshadow-standard;
   @media screen and (min-width: $tablet) {
     width: 48%;
+    height: 345px;
     box-shadow: none;
   }
   @media screen and (min-width: $desktop) {
-    width: 40%;
+    width: 22%;
   }
 
   .resto-prev__cardlink {
