--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: auto;
-    width: 25%;
+    width: 28%;
     margin: auto;
     margin-top: 0;
     margin-bottom: 0;
@@ -129,7 +129,7 @@ body {
 @media screen and (min-width: 992px) {
   .section2__card .section2__number {
     position: relative;
-    left: -15%;
+    left: -11%;
   }
 }
 .section2__card .section2__icon {
@@ -145,7 +145,7 @@ body {
 @media screen and (min-width: 992px) {
   .section2__card .section2__icon {
     position: relative;
-    left: -20%;
+    left: -14%;
   }
 }
 .section2__card .section2__text {
@@ -171,7 +171,7 @@ body {
   align-items: center;
   align-items: stretch;
   width: 100%;
-  height: auto;
+  height: 300px;
   margin-bottom: 30px;
   border-radius: 17px;
   box-shadow: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
@@ -179,12 +179,13 @@ body {
 @media screen and (min-width: 576px) {
   .resto-prev__card {
     width: 48%;
+    height: 345px;
     box-shadow: none;
   }
 }
 @media screen and (min-width: 992px) {
   .resto-prev__card {
-    width: 40%;
+    width: 22%;
   }
 }
 .resto-prev__card .resto-prev__cardlink {
@@ -383,6 +384,17 @@ body {
     align-items: center;
   }
 }
+@media screen and (min-width: 992px) {
+  .index-foot {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    flex-wrap: wrap;
+  }
+}
 .index-foot .index-foot__logo {
   width: 25%;
   height: auto;
@@ -392,6 +404,11 @@ body {
 @media screen and (min-width: 576px) {
   .index-foot .index-foot__logo {
     width: 50%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .index-foot .index-foot__logo {
+    width: 76%;
   }
 }
 .index-foot .index-foot__link {
@@ -406,6 +423,16 @@ body {
   .index-foot .index-foot__link {
     font-size: 1.5rem;
     height: 50px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .index-foot .index-foot__link {
+    width: 25%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
   }
 }
 .index-foot .link__icon {
@@ -448,19 +475,28 @@ main .section2 {
     justify-content: space-around;
     align-items: center;
     height: 350px;
+    flex-wrap: wrap;
   }
 }
 main .section2 .section2__maintitle {
   margin-left: 20px;
 }
+@media screen and (min-width: 576px) {
+  main .section2 .section2__maintitle {
+    text-align: center;
+  }
+}
 @media screen and (min-width: 992px) {
   main .section2 .section2__maintitle {
+    width: 100%;
     font-size: 1.5rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: auto;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 main .section3 {
@@ -472,6 +508,15 @@ main .section3 {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-bottom: 85px;
+  }
+}
+@media screen and (min-width: 992px) {
+  main .section3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
   }
 }
 @media screen and (min-width: 576px) {
@@ -479,6 +524,8 @@ main .section3 {
     width: 86%;
     margin-top: 105px;
     margin-bottom: -7px;
+    text-align: center;
+    margin-left: 55px;
   }
 }
 @media screen and (min-width: 992px) {
@@ -489,7 +536,6 @@ main .section3 {
     align-items: center;
     margin: auto;
     font-size: 1.5rem;
-    text-align: center;
     margin-top: 90px;
   }
 }
